--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "nesbot/carbon": "~1.18",
     "morrislaptop/laravel-five-package-bridges": "~1.0",
     "camroncade/timezone": "dev-master",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "fenos/notifynder": "3.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
