--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "ext-gd": "*",
     "fenos/notifynder": "3.*",
     "league/flysystem": "^1.0",
-    "league/flysystem-dropbox": "^1.0"
+    "league/flysystem-dropbox": "^1.0",
+    "maknz/slack": "^1.7"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
