--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "fenos/notifynder": "3.*",
     "league/flysystem": "^1.0",
     "league/flysystem-dropbox": "^1.0",
-    "maknz/slack": "^1.7"
+    "maknz/slack": "^1.7",
+    "jcf/geocode": "1.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
