--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "league/flysystem": "^1.0",
     "league/flysystem-dropbox": "^1.0",
     "maknz/slack": "^1.7",
-    "jcf/geocode": "1.0.*"
+    "jcf/geocode": "1.0.*",
+    "elibyy/laravel-tcpdf": "0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
