--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "league/flysystem-dropbox": "^1.0",
     "maknz/slack": "^1.7",
     "jcf/geocode": "1.0.*",
-    "elibyy/laravel-tcpdf": "0.*"
+    "elibyy/laravel-tcpdf": "0.*",
+    "guhelski/forecast-php": "1.1.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
